# dotfiles

./: .Xdefaults  .gitignore  .ideavimrc  .ledgerrc  .tmux.conf  .vimperatorrc  .vrapperrc  _keysnail.js
.config/: _keysnail.js  alacritty.toml  compton.conf  picom.conf  redshift.conf
.config/autostart/: Compton.desktop  Keyboard Settings.desktop  Picom.desktop  Xcape.desktop  i3Wm.desktop  redshift-gtk.desktop
.config/dunst/: dunstrc
.config/emacs/: early-init.el  init.el
.config/fish/: config.fish
.config/git/: config
.config/hypr/: hyprland.conf  hyprlock.conf  hyprpaper.conf
.config/i3/: config  i3lock_wrapper  i3status.py
.config/mimi/: mime.conf
.config/mpd/: mpd.conf
.config/mpv/: input.conf  mpv.conf
.config/ncmpcpp/: bindings  config
.config/paru/: paru.conf
.config/polybar/: config  config.ini  run_polybar.py
.config/ranger/: rc.conf  rifle.conf
.config/rofi/: config  config.rasi
.config/rofi-pass/: config
.config/spacemacs/: init.el  sm.py  user-config.org
.config/termite/: config
.config/tridactyl/: tridactylrc
.emacs.d/: init.el
.emacs.d/init/: evil.el  (+43 more)
.i3/: config  i3status.py
.ncmpcpp/: bindings  config
i3bar++/: Block.cpp  CMakeLists.txt  ChargeBlock.cpp  DateBlock.cpp  Format.cpp  PowerBlock.cpp  Utils.cpp  VolumeBlock.cpp  main.cpp  run_i3bar++
i3bar++/inc/: Block.hpp  Format.hpp  Globals.hpp  MusicBlock.hpp  ParseResult.hpp  VolumeBlock.hpp
i3bar++/include/: ChargeBlock.hpp  DateBlock.hpp  MemBlock.hpp  Utils.hpp
i3bar++/src/: Block.cpp  CpuBlock.cpp  MemBlock.cpp  MusicBlock.cpp  Utils.cpp  main.cpp
(+269 files in other folders)
